<resources>
    <string name="app_name">简聊</string>
    <string name="send">发送</string>
    <string name="confirm">确定</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="wait_dialog_title">给力加载中...</string>
    <string name="press_and_hold_the_talk">按住说话</string>
    <string name="new_loose_send">松开发送</string>
    <string name="new_press_record">按住录音</string>
    <string name="new_time_to_low">时间太短!</string>
    <string name="record">录音</string>
    <string name="new_cancel_record">取消录音!</string>

    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="new_year">年</string>
    <string name="new_month">月</string>
    <string name="new_date">日</string>
    <string name="new_hour">时</string>
    <string name="new_minite">分</string>
    <string name="today">今天</string>
    <string name="current_month">本月</string>
    <string name="last_month">上月</string>
    <string name="yesterday">昨天</string>
    <string name="years">年份</string>
    <string name="picture">图片</string>
    <string name="voice">语音</string>
    <string name="take_photo">拍照</string>
    <string name="mine">我</string>
    <string name="chat_location">位置</string>
    <string name="my_location">选择位置</string>
    <string name="chat_single">单聊</string>
    <string name="chat_group">群聊</string>
    <string name="new_message">收到新消息</string>
    <string name="delete">删除</string>
    <string name="top_msg">置顶</string>
    <string name="cancel_top_msg">取消置顶</string>
    <string name="copy_msg">复制消息</string>
    <string name="save">保存</string>

    <string name="util_date_user">#和@模式字符不能同时使用.</string>
    <string name="util_date_no_operate">暂时还不支持的操作</string>
    <string name="util_date_one_second">1秒前</string>
    <string name="util_date_second">秒前</string>
    <string name="util_date_minute">分钟前</string>
    <string name="util_date_hour">小时前</string>
    <string name="util_date_today">今天</string>
    <string name="util_date_yestoday">昨天</string>
    <string name="util_date_qiantian">前天</string>
    <!-- 我的消息 -->
    <string name="check_sys_msg">查看系统消息</string>
    <string name="delete_user_confim">删除用户会将该用户所有聊天记录一并删除，是否继续</string>
    <string name="type_photo">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="message_date_type">yyyy年MM月dd日 HH:mm</string>
    <string name="upcoming_date_type">MM-dd HH:mm</string>
    <string name="message_date_typetwo">yyyy年MM月dd日HH点mm分</string>
    <string name="chat_attendance">考勤</string>
    <string name="task">任务</string>
    <string name="input_content">输入内容</string>
    <string name="limit_input_length">最多只能输入0位</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="resend_fail_msg">消息发送失败，重新发送该条消息?</string>
    <string name="title_alert">提示信息</string>
    <string name="select_operation">选择操作</string>

    <!-- 图片操作 -->
    <string-array name="pictrue_operation">
        <item>保存</item>
        <item>识别图中二维码</item>
    </string-array>
</resources>
