<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/title_alert"
        android:textColor="@color/dialog_title_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        style="@style/line_dividing_gray_horizontal_style"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@null"
        android:hint="@string/input_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/blue_009be0" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/blue_title_bg"
            android:textSize="19sp" />

        <View
            style="@style/line_dividing_gray_horizontal_style"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp" />

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/blue_title_bg"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>