<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_custom_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/title_alert"
        android:textColor="@color/dialog_title_black"
        android:textSize="@dimen/font18" />

    <TextView
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/dialog_title_black"
        android:textSize="@dimen/font16" />

    <View style="@style/line_dividing_gray_horizontal_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/blue_009be0"
            android:textSize="@dimen/font16" />

        <View 
            android:id="@+id/dividerView"
            style="@style/line_dividing_gray_vertical_style" />

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/gray_tint_cccccc"
            android:textSize="@dimen/font16" />
    </LinearLayout>

</LinearLayout>