<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_custom_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialogTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="22dp"
        android:gravity="center_horizontal"
        android:textColor="@color/dialog_title_black"
        android:textSize="@dimen/font16"/>

    <EditText
        android:id="@+id/contentEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/process_list_item_bg"
        android:hint="@string/input_content"
        android:maxLength="18"
        android:padding="10dp"
        android:textColor="@color/dialog_title_black"
        android:textColorHint="@color/gray_tint_cccccc"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="@dimen/font15" />

    <View
        style="@style/line_dividing_gray_horizontal_style"
        android:layout_marginTop="17dp"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cancelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/cancel"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/font15" />

        <View
            style="@style/line_dividing_gray_vertical_style"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/sureText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/ok"
            android:textColor="@color/blue_009be0"
            android:textSize="@dimen/font15" />
    </LinearLayout>

</LinearLayout>