<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_custom_dialog"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialogTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/font16" />

    <View
        style="@style/line_dividing_gray_horizontal_style"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        />

       <com.hhxh.make.view.custom.MaxLengthEditText 
           android:id="@+id/contentEdit"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="@dimen/font15"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:textColor="@color/dialog_title_black"
           android:textColorHint="@color/gray_tint_cccccc"
           android:maxLength="15"
           android:background="@null"
           android:hint="@string/input_content"
           />
          <View 
           android:layout_width="match_parent"
           android:layout_height="1px"
           android:textSize="@dimen/font14"
           android:layout_marginLeft="15dp"
           android:layout_marginRight="15dp"
           android:layout_marginTop="3dp"           
           android:background="@color/blue_009be0"
           />
    <View
        android:layout_marginTop="15dp"
        style="@style/line_dividing_gray_horizontal_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sureText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/confirm"
            android:textColor="@color/blue_009be0"
            android:textSize="@dimen/font18" />

        <View style="@style/line_dividing_gray_vertical_style" />

        <TextView
            android:id="@+id/cancelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/cancel"
            android:textColor="@color/blue_009be0"
            android:textSize="@dimen/font18" />
    </LinearLayout>
</LinearLayout>